--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<link rel="icon" href="pic/hku.png">
+<link rel="icon" href="pic/dhu.png">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
 <meta name="keywords" content="Shuai Yu, Yu Shuai, DHU, Donghua University, Shanghai, Artificial Intelligence, Computer, Vision, Machine, Learning, Medical Image, Multimodal Learning, Medical AI, AI for Healthcare"> 
@@ -38,11 +38,9 @@
 
 				<h3>Assistant Professor</h3>
 				<p>
-					Room 253, Academic Building 1, <br>
+					Room 103, Academic Building 1, <br>
 					School of Computer Science and Technology<br>
 					Donghua University <br>
-					<br>
-					
 					Email: shuai_yu@dhu.edu.cn
 					
 				</p>
@@ -65,88 +63,11 @@
 	My main research areas include cross-modal information processing and retrieval, natural language processing, and audio/music signal processing.
 </p>
 	
-<p>	
-	Before joining HKU, I was a postdoctoral research fellow at <a href="https://www.stanford.edu/">Stanford University</a>, working with Prof. <a href="https://med.stanford.edu/xinglab.html">Lei Xing</a>. 
-	I obtained my Ph.D. degree in <a href="http://www.cse.cuhk.edu.hk/">CSE</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a> in 2019 
-	and the B.Eng degree in <a href="http://www.cs.zju.edu.cn/">CS</a>, <a href="http://www.zju.edu.cn/">Zhejiang University</a> in 2015.
-</p>
-
 <p style="color:red;">
-	[New in Dec 2023] We have Postdoc/RA openings in multimodal learning and computational pathology. Please contact me if you are interested in this opportunity (<a href="./MedAI_202312.pdf" target="_blank">Details</a>).
-</p>
-	
-<p style="color:red;">
-	We are looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
-	Welcome to drop me an email with your CV and transcripts. <br>
-</p>
-
-<p style="color:red;">
-	If you are an HKU student interested in doing research with me, please send me an email.
+	If you are an DHU student interested in doing research with me, please send me an email.
 </p>
 
 
-
-<h2>News</h2>
-
-<div style="height: 240px; overflow: auto;">
-<ul>
-	<li>
-		[10/2024] One paper was accepted by TMI.
-	</li>
-	<li>
-		[09/2024] One paper was accepted by NeurIPS 2024.
-	</li>
-	<li>
-		[09/2024] One paper was accepted by TPAMI.
-	</li>
-	<li>
-		[08/2023] Recent publications in 2024 Summer: 1 MedIA, 1 NN, 1 JBHI, 2 ECCV.
-	</li>
-	<li>
-		[06/2024] Three papers were accepted by MICCAI 2024.
-	</li>
-	<li>
-		[02/2024] One paper was accepted by CVPR 2024.
-	</li>
-	<li>
-		[01/2024] Invited to serve as Area Chair in MICCAI 2024.
-	</li>
-	<li>
-		[12/2023] Two papers were accepted by AAAI 2024.
-	</li>
-	
-	<li>
-		[09/2023] Two papers were accepted by NeurIPS 2023.
-	</li>
-	<li>
-		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 1 JBHI, 1 ICCV, 5 MICCAI.
-	</li>
-	<li>
-		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
-	</li>
-	<li>
-		[03/2023] Three papers were accepted by CVPR 2023.
-	</li>
-	<li>
-		[01/2023] Invited to serve as Area Chair in MICCAI 2023.
-	</li>
-	<li>
-		[11/2022] One co-authored paper was accepted by Nature Communications.
-	</li>
-	<li>
-		[10/2022] Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank">Stanford List</a>.
-	</li>
-	<li>
-		[09/2022] Our MICCAI <a href="https://cmmca2022.casconf.cn" target="_blank">CMMCA workshop</a> paper got the <b>Best Paper Award</b>.
-	</li>
-	<li>
-		[09/2022] Our MICCAI <a href="https://sites.google.com/view/dart2022/" target="_blank">DART workshop</a> paper got the <b>Best Paper Honorable Mention Award</b>.
-	</li>
-	<li>
-		[04/2022] Named on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
-	</li>
-</ul>
-</div>
 <br>
 <div id="experience">
 <h2>Experience</h2>
