--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				
 			</td>
 			<td>
-				<img src="./pic/lequan_new_crop.jpeg" border="0" width="200"><br>
+				<img src="./pic/yuyu.png" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -69,30 +69,10 @@
 
 
 <br>
-<div id="experience">
-<h2>Experience</h2>
-<ul>
-	<li>
-		<div style="float:left; text-align:left">Stanford University, Palo Alto, California, USA</div> <div style="float:right; text-align:right">Nov. 2019 – Mar. 2021</div><br>
-		Postdoctoral Research Fellow<br>
-		Advisor: <a href="https://med.stanford.edu/xinglab.html">Prof. Lei Xing</a><br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">NVIDIA, deep learning for medical imaging research group, Bethesda, Maryland, USA</div> <div style="float:right; text-align:right">Jul. 2018 – Oct. 2018</div><br>
-		Applied Research Intern<br>
-		Topic: Few-shot medical image segmentation<br>
-	</li>
-	<li>
-		<div style="float:left; text-align:left">Siemens Healthineers, Princeton, New Jersey, USA</div> <div style="float:right; text-align:right">Mar. 2017 – Jul. 2017</div><br>
-		Research Intern<br>
-		Topic: Body landmark detection via deep reinforcement learning<br>
-	</li>
-</ul>
-<br>
-</div>
+
 
 <div id="publications">
-<h2>Selected Publications [<a href="https://scholar.google.com/citations?user=llXf3wUAAAAJ&hl=en">Google Scholar</a>]</h2>
+<h2>Selected Publications </h2>
 <!--     <ul>
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
@@ -616,67 +596,8 @@ Segmentation</a><br>
 		</p>
 	</li>
 
-	<li>
-		<a href="https://arxiv.org/abs/1708.00573" target="_blank">Automatic 3D Cardiovascular MR Segmentation with Densely-Connected Volumetric ConvNets</a><br>
-		<b>Lequan Yu</b>, Jie-Zhi Cheng, Qi Dou, Xin Yang, Hao Chen, Jing Qin, Pheng-Ann Heng.<br>
-		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2017.</br>
-		<p style="margin-top:3px">
-			[<a href="DenseVoxNet/index.html" target="_blank">project</a>]
-			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
-		</p>
-	</li>
-
-	<li>
-		<a href="https://ieeexplore.ieee.org/document/7792699" target="_blank">Automated Melanoma Recognition in Dermoscopy Images via Very Deep Residual Networks</a><br>
-		<b>Lequan Yu</b>, Hao Chen, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2017.</br>
-		<font color="red">ESI Highly Cited Paper</font></br>
-		<font color="red">Ranked 1st place in Skin Lesion Analysis Towards Melanoma Detection Challenge (ISIC 2016) </font></br>
-		<p style="margin-top:3px">
-			[<a href="skin/index.html" target="_blank">project</a>] 
-			[<a href="https://github.com/yulequan/melanoma-recognition" target="_blank">code</a>]
-			[<a href="https://challenge.kitware.com/#challenge/560d7856cad3a57cfde481ba" target="_blank">challenge website</a>]
-		</p>
-	</li>
-
-	<li>
-		<a href="https://ieeexplore.ieee.org/document/7776845" target="_blank">Integrating Online and Offline 3D Deep Learning for Automated Polyp Detection in Colonoscopy Videos</a><br>
-		<b>Lequan Yu</b>, Hao Chen, Qi Dou, Jing Qin, Pheng-Ann Heng.<br>
-		<em>IEEE Journal of Biomedical and Health Informatics</em> (<i><b>JBHI</b></i>), 2017.</br>
-	</li>
-
-	<li>
-		<a href="https://www.sciencedirect.com/science/article/pii/S1361841517300725" target="_blank">3D Deeply Supervised Network for Automated Segmentation of Volumetric Medical Images</a><br>
-		Qi Dou, <b>Lequan Yu</b>, Hao Chen, Yueming Jin, Xin Yang, Jing Qin, Pheng-Ann Heng.<br>
-		<em>Medical Image Analysis</em> (<i><b>MedIA</b></i>), 2017.<br>
-		<font color="red">ESI Highly Cited Paper</font></br>
-		<font color="red">MedIA-MICCAI'17 Best Paper Award</font></br>
-		<p style="margin-top:3px">
-			[<a href="https://github.com/yulequan/HeartSeg" target="_blank">code</a>]
-		</p>
-	</li>
 	
-
-	<li>
-		<a href="https://link.springer.com/chapter/10.1007/978-3-319-52280-7_10" target="_blank">3D FractalNet: Dense Volumetric Segmentation for Cardiovascular MRI Volumes</a><br>
-		<b>Lequan Yu</b>, Xin Yang, Jing Qin, Pheng-Ann Heng.<br>
-		<em>MICCAI Workshop on Whole-Heart and Great Vessel Segmentation from 3D Cardiovascular MRI in Congenital Heart Disease</em>, 2016.</br>
-		<font color="red">Ranked 1st place in Whole-Heart and Great Vessel Segmentation Challenge</font></br>
-		<p style="margin-top:3px">
-			[<a href="http://segchd.csail.mit.edu/index.html" target="_blank">challenge website</a>]
-		</p>
-		
-	</li>
 	
-	<li>
-		<a href="https://ieeexplore.ieee.org/document/7403984" target="_blank">Automatic Detection of Cerebral Microbleeds from MR Images via 3D Convolutional Neural Networks</a><br>
-		Qi Dou*, Hao Chen*, <b>Lequan Yu</b>, Lei Zhao, Jing Qin, Defeng Wang, Vincent CT Mok, Lin Shi, Pheng-Ann Heng.<br>
-		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2016.</br>
-		<font color="red">ESI Highly Cited Paper</font></br>
-		<p style="margin-top:3px">
-			[<a href="http://appsrv.cse.cuhk.edu.hk/~qdou/cmb-3dcnn/cmb-3dcnn.html" target="_blank">project</a>]
-		</p>
-	</li>
 
 </ul>
 <br>
