--- a/index.html
+++ b/index.html
@@ -104,60 +104,16 @@
 	<b>Current Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
-	<tbody>
-		<tr><td> <a href="https://howardchanth.github.io" target="_blank">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://github.com/fuying-wang" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://scholar.google.com/citations?hl=zh-CN&user=s3MpAVgAAAAJ" target="_blank"> Weiqin Zhao</a> (BEng at Beihang)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://scholar.google.com/citations?user=TPD_P98AAAAJ" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
-		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
-		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
-		<tr><td> Yihang Chen (BSc at RUC)(PhD Student, 2023-)</td></tr>		
-		<tr><td> <a href="https://yanyanh.com/" target="_blank">Yanyan Huang</a>a (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
-		<tr><td> Feng Wu (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
-		<tr><td> Jiacheng Xu (BSc at HKU)(PhD Student, 2023-)(HKPF)</td></tr>
-		<tr><td> Liting Yu (BSc at XJTU)(PhD Student, 2023-)</td></tr>	
-		<tr><td> Yushi Feng (BSc at HKU)(PhD Student, 2024-)</td></tr>	
-		<tr><td> Tao Ma (MPhil at PKU)(PhD Student, 2024-)</td></tr>
-		<tr><td> Ziyan Xiao (BASc at HKU)(PhD Student, 2024-)(HKPF)</td></tr>
-		<tr><td> Ruiyang Zhang (MSc at NUS)(PhD Student, 2024-)</td></tr>
-	</tbody>
+	LIU Jun (2023- ）\
+	HE Xiaoliang (2023- ）\
+	DONG Kangjie (2024- ）\
+	LI Xiang (2024- ）\
+	CAO Jingkai (2024- ）\
+	WANG Shengqi (2024- ）
 	</table>
 	<br>
 	
-	
-	<b>Co-supervised Students:</b>
-	<br>
-	<table style="border-spacing:2px">
-	<tbody>
-		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(w/ K.C. Yuen)</td></tr>
-		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF) (w/ Wai-Kay Seto)</td></tr>
-		<tr><td> Pei Cai (MPhil at NTU)(PhD Student, 2023-) (w/ Jianpan Huang)</td></tr>
-	</tbody>
-	</table>
-	<br>
-	
-	<b>Previous Mentorship:</b>
-	<br>
-	<table style="border-spacing:2px">
-	<body>
-		<tr><td> Jiayi Xin (2024 Undergraduate Intern) (BASc at HKU --> PhD at UPenn)</td></tr>
-		<tr><td> Ziyan Xiao (2024 Undergraduate Intern) (BASc at HKU --> PhD at HKU)</td></tr>
-		<tr><td> Yushi Feng (2024 Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
-		<tr><td> Jiacheng Xu (2023 Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
-		<tr><td> Wing Kwan Pang (2023 Undergraduate Intern) (BSc at HKU --> MPhil at HKU)</td></tr>
-		<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
-		<tr><td> Tengfei Cui (2022 Summer Intern) (BSc at XJ-Liverpool --> MS Biostatistics at UW)</td></tr>
-		<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
-		<tr><td> Ruichen Luo (2021 Summer Intern) (BEng at ZJU --> ECE PhD at UMN)</td></tr>
-		<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
-		<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> PhD at NTU)</td></tr>
-		<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
-		<tr><td> Kang Li (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
-		<tr><td> <a href="https://emma-sjwang.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Asst. Prof. at PolyU)</td></tr>
-		<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Assoc. Prof. at HUST)</td></tr>
-	</tbody>
-	</table>
-	<br>
+
 </div>
 	
 
