--- a/index.html
+++ b/index.html
@@ -78,18 +78,31 @@
 	</ul>
 -->
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
-	<ul>
+1. Shuai Yu.“MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music”, Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, Full paper, CCF-A) 2024.
+
+2. Shuai Yu,Jun Liu, Yi Yu, Wei Li. “A Scalable Sparse Transformer for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), 2024.
+
+3. Shuai Yu, Yi Yu, Wei Li, “A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction”, Neurocomputing (IF=6.0), Vol.521, pp. 160-171, 2023.
+
+4. Shuai Yu, Xi Chen, Wei Li, “Hierarchical Graph-based Neural Network for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), pp. 626-630, 2022.
+
+5. Shuai Yu, Yiwei Ding, Kun Qian, Bin Hu, Wei Li, Björn Schuller, “A Glance-and-gaze Network for Respiratory Sound Classification”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), pp. 9007-9011, 2022.
+
+6. Ke Chen, Shuai Yu, Cheng-i Wang, Wei Li, Taylor Berg-Kirkpatrick, Shlomo Dubnov, “TONet: Tone-Octave Network for Singing Melody Extraction from Polyphonic Music”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), pp. 621-625, 2022.
+
+7. Shuai Yu, Yi Yu, Xi Chen and Wei Li, “HANME: Hierarchical Attention Network for Singing Melody Extraction”, IEEE Signal Processing Letters (IF=3.109), vol. 28, pp. 1006-1010, 2021.
+
+8. Shuai Yu, Xiaoheng Sun, Yi Yu, Wei Li, “Frequency-temporal Attention Network for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), pp. 251-255, 2021.
+
+9. Shuai Yu, Chenxing Li, Feng Deng, Xiaorui Wang, “Rethinking Singing Voice Separation with Spectral-Temporal Transformer”, Asia-Pacific Signal and Information Processing Associate, (APSIPA ASC, EI), pp. 884-889, 2021.
+
+10. Shuai Yu, Yongbo Wang, Min Yang, Baocheng Li, Jialie Shen, “NAIRS: A Neural Attentive Interpretable Recommendation System”, ACM International Conference on Web Search and Data Mining (WSDM, CCF-B, Demo Paper), pp. 790-793, 2019.
+
+11. Shuai Yu, Min Yang, Qiang Qu, Ying Shen, “Contextual-Boosted Deep Neural Collaborative Filtering Model for Interpretable Recommendation”, Expert Systems with Applications (IF=8.665), vol.136, pp. 365-375, 2019.
+
+12. Sixuan Chen, Shuai Yu *, “WAIS: Word Attention for Joint Intent Detection and Slot Filling”, Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, CCF-A, Abstract), pp. 9927-9928, 2019.
+
 	
-	
-		
-	<li>
-		<a href="https://arxiv.org/abs/2401.11674" target="_blank">Memory-Efficient Prompt Tuning for Incremental Histopathology Classification</a><br>
-		Yu Zhu, Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
-		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2024.</br>
-	</li>
-	</ul>	
-	<p><font face="Arial" size="4"><b>2023</b></font></p>
-	<ul>
 	
 
 
