--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
     <div id="layout-menu">
         <a href="#">Home</a>
+	<a href="#biography">Biography</a>
         <a href="#publications">Publications</a>
         <a href="#students">Students</a>
         
@@ -50,6 +51,7 @@
 	</tr></tbody>
 </table>
 
+<div id="biography">
 <h2>Biography</h2>
 <p>
 	I received my doctor's degree in Computer Science and Technology from Fudan University in June 2022. 
@@ -74,7 +76,7 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
-	<p><font face="Arial" size="4"><b>2024</b></font></p>
+
 1. Shuai Yu.“MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music”, Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, Full paper, CCF-A) 2024.
 <br><br>
 2. Shuai Yu,Jun Liu, Yi Yu, Wei Li. “A Scalable Sparse Transformer for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, CCF-B), 2024.
