--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </p>
 	
 <p style="color:red;">
-	If you are an DHU student interested in doing research with me, please send me an email.
+	If you are a DHU student interested in doing research with me, please send me an email.
 </p>
 
 
