--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 <div id="students">
 <h2>Students</h2>	
-	LIU Jun (2023- ）<br>
+	LIU Jun (2023-Present ）<br>
 	HE Xiaoliang (2023- ）<br>
 	DONG Kangjie (2024- ）<br>
 	LI Xiang (2024- ）<br>
