--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
 <p>
 	I received my doctor's degree in Computer Science and Technology from Fudan University in June 2022. 
 	Since December 2022, I have been an Assistant Professor in the School of Computer Science and Technology at Donghua University. 
-	I have published over ten papers in top conferences and journals. 
-	Additionally, I serve as a reviewer for several renowned publications and conferences, including IEEE Transactions on Affective Computing,
-	IEEE-ACM Transactions on Audio, Speech, and Language Processing, Neurocomputing, ICASSP, and ICME.
-	My main research areas include cross-modal information processing and retrieval, natural language processing, and audio/music signal processing.
+	I have published over 20 papers in top conferences and journals. 
+	Additionally, I serve as an area chair at ICASSP 2025. I also serve as a reviewer for several top journals and conferences, including TASLP, TMM, TAC, AAAI, ACM MM, ICASSP, ICME.
+	My main research areas include Music AI, cross-modal information processing and retrieval.
 </p>
 	
 <p style="color:red;">
@@ -76,31 +75,34 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
-
-<b>Shuai Yu</b>.“MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music”, Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, and Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia,<b>CCF-A</b>, Best Paper Nomination), pp. 545-553, 2024.
 <br><br>
-<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. “A Scalable Sparse Transformer for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), 2024.
+<b>Shuai Yu</b>."MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
 <br><br>
-<b>Shuai Yu</b>, Yi Yu, Wei Li, “A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction”, Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
+<b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang. “RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction.”, IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
 <br><br>
-<b>Shuai Yu</b>, Xi Chen, Wei Li, “Hierarchical Graph-based Neural Network for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 626-630, 2022.
+<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), 2024.
 <br><br>
-<b>Shuai Yu</b>, Yiwei Ding, Kun Qian, Bin Hu, Wei Li, Björn Schuller, “A Glance-and-gaze Network for Respiratory Sound Classification”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 9007-9011, 2022.
+<b>Shuai Yu</b>, Yi Yu, Wei Li, "A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction", Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
 <br><br>
-Ke Chen, <b>Shuai Yu</b>, Cheng-i Wang, Wei Li, Taylor Berg-Kirkpatrick, Shlomo Dubnov, “TONet: Tone-Octave Network for Singing Melody Extraction from Polyphonic Music”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 621-625, 2022.
+<b>Shuai Yu</b>, Xi Chen, Wei Li, "Hierarchical Graph-based Neural Network for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 626-630, 2022.
 <br><br>
-<b>Shuai Yu</b>, Yi Yu, Xi Chen and Wei Li, “HANME: Hierarchical Attention Network for Singing Melody Extraction”, IEEE Signal Processing Letters (JCR Q2, IF=3.109), vol. 28, pp. 1006-1010, 2021.
+<b>Shuai Yu</b>, Yiwei Ding, Kun Qian, Bin Hu, Wei Li, Björn Schuller, "A Glance-and-gaze Network for Respiratory Sound Classification", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 9007-9011, 2022.
 <br><br>
-<b>Shuai Yu</b>, Xiaoheng Sun, Yi Yu, Wei Li, “Frequency-temporal Attention Network for Singing Melody Extraction”, International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 251-255, 2021.
+Ke Chen, <b>Shuai Yu</b>, Cheng-i Wang, Wei Li, Taylor Berg-Kirkpatrick, Shlomo Dubnov, "TONet: Tone-Octave Network for Singing Melody Extraction from Polyphonic Music", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 621-625, 2022.
 <br><br>
-<b>Shuai Yu</b>, Chenxing Li, Feng Deng, Xiaorui Wang, “Rethinking Singing Voice Separation with Spectral-Temporal Transformer”, Asia-Pacific Signal and Information Processing Associate, (APSIPA ASC, EI), pp. 884-889, 2021.
+<b>Shuai Yu</b>, Yi Yu, Xi Chen and Wei Li, "HANME: Hierarchical Attention Network for Singing Melody Extraction", IEEE Signal Processing Letters (JCR Q2, IF=3.109), vol. 28, pp. 1006-1010, 2021.
+<br><br>
+<b>Shuai Yu</b>, Xiaoheng Sun, Yi Yu, Wei Li, "Frequency-temporal Attention Network for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 251-255, 2021.
+<br><br>
+<b>Shuai Yu</b>, Chenxing Li, Feng Deng, Xiaorui Wang, "Rethinking Singing Voice Separation with Spectral-Temporal Transformer", Asia-Pacific Signal and Information Processing Associate, (APSIPA ASC, EI), pp. 884-889, 2021.
 <br><br>
 <h2>Before 2020 </h2>
-<b>Shuai Yu</b>, Yongbo Wang, Min Yang, Baocheng Li, Jialie Shen, “NAIRS: A Neural Attentive Interpretable Recommendation System”, ACM International Conference on Web Search and Data Mining (WSDM, <b>CCF-B</b>, Demo Paper), pp. 790-793, 2019.
+<b>Shuai Yu</b>, Yongbo Wang, Min Yang, Baocheng Li, Jialie Shen, "NAIRS: A Neural Attentive Interpretable Recommendation System", ACM International Conference on Web Search and Data Mining (WSDM, <b>CCF-B</b>, Demo Paper), pp. 790-793, 2019.
 <br><br>
-<b>Shuai Yu</b>, Min Yang, Qiang Qu, Ying Shen, “Contextual-Boosted Deep Neural Collaborative Filtering Model for Interpretable Recommendation”, Expert Systems with Applications (JCR Q1, IF=8.665), vol.136, pp. 365-375, 2019.
+<b>Shuai Yu</b>, Min Yang, Qiang Qu, Ying Shen, "Contextual-Boosted Deep Neural Collaborative Filtering Model for Interpretable Recommendation", Expert Systems with Applications (JCR Q1, IF=8.665), vol.136, pp. 365-375, 2019.
 <br><br>
-Sixuan Chen, <b>Shuai Yu*</b>, “WAIS: Word Attention for Joint Intent Detection and Slot Filling”, Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>, Abstract), pp. 9927-9928, 2019.
+Sixuan Chen, <b>Shuai Yu*</b>, "WAIS: Word Attention for Joint Intent Detection and Slot Filling", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>, Abstract), pp. 9927-9928, 2019.
 	
 
 </ul>
