--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
-<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, and Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia,<b>CCF-A</b>, Best Paper Nomination), pp. 545-553, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, and Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
 <br><br>
 <b>Shuai Yu</b>."MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
 <br><br>
