--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Ke Chen, <b>Shuai Yu</b>, Cheng-i Wang, Wei Li, Taylor Berg-Kirkpatrick, Shlomo 
 <br><br>
 <b>Shuai Yu</b>, Chenxing Li, Feng Deng, Xiaorui Wang, "Rethinking Singing Voice Separation with Spectral-Temporal Transformer", Asia-Pacific Signal and Information Processing Associate, (APSIPA ASC, EI), pp. 884-889, 2021.
 <br><br>
-<h2>Before 2020 </h2>
+<h2>Previous Publications Before 2020 </h2>
 <b>Shuai Yu</b>, Yongbo Wang, Min Yang, Baocheng Li, Jialie Shen, "NAIRS: A Neural Attentive Interpretable Recommendation System", ACM International Conference on Web Search and Data Mining (WSDM, <b>CCF-B</b>, Demo Paper), pp. 790-793, 2019.
 <br><br>
 <b>Shuai Yu</b>, Min Yang, Qiang Qu, Ying Shen, "Contextual-Boosted Deep Neural Collaborative Filtering Model for Interpretable Recommendation", Expert Systems with Applications (JCR Q1, IF=8.665), vol.136, pp. 365-375, 2019.
