--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div id="biography">
 <h2>Biography</h2>
 <p>
-	I received my PhD. degree in Computer Science and Technology from Fudan University in June 2022. 
+	I received my Ph.D. degree in Computer Science and Technology from Fudan University in June 2022. 
 	Since December 2022, I have been an Assistant Professor in the School of Computer Science and Technology at Donghua University. 
 	I have published over 20 papers in top conferences and journals. 
 	Additionally, I serve as an area chair at ICASSP 2025. I also serve as a reviewer for several top journals and conferences, including TASLP, TMM, TAC, AAAI, ACM MM, ICASSP, ICME.
@@ -62,7 +62,7 @@
 </p>
 	
 <p style="color:red;">
-	If you are a DHU student interested in doing research with me, please send me an email.
+	If you are a DHU student interested in doing research with me, please feel free to drop me an email.
 </p>
 
 
