--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="pic/dhu.png">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Shuai Yu, Yu Shuai, DHU, Donghua University, Shanghai, Artificial Intelligence, Computer, Vision, Machine, Learning, Medical Image, Multimodal Learning, Medical AI, AI for Healthcare"> 
+<meta name="keywords" content="Shuai Yu, Yu Shuai, DHU, Donghua University, Shanghai, Artificial Intelligence, Music AI, Machine, Learning, Music Information Retrieval, Multimodal Learning, Singing Melody Extraction"> 
 <meta name="description" content="Shuai Yu is an Assistant Professor at DHU.">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Shuai Yu</title>
@@ -81,7 +81,7 @@
 <br><br>
 <b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang. “RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction.”, IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
 <br><br>
-<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), 2024.
+<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer Model for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 1071-1075, 2024.
 <br><br>
 <b>Shuai Yu</b>, Yi Yu, Wei Li, "A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction", Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
 <br><br>
