--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 <div id="biography">
 <h2>Biography</h2>
 <p>
-	I received my Ph.D. degree in Computer Science from Fudan University in June 2022. 
-	Since December 2022, I have been an Assistant Professor in the School of Computer Science and Technology at Donghua University. 
+	I am an Assistant Professor in the School of Computer Science and Technology at Donghua University. I received my Ph.D. degree in Computer Science from Fudan University in 2022. 
 	I have published over 20 papers in top conferences and journals. 
 	Additionally, I serve as an area chair at ICASSP 2025. I also serve as a reviewer for several top journals and conferences, including TASLP, TMM, TAC, AAAI, ACM MM, ICASSP, ICME.
 	My main research areas include Music AI, cross-modal information processing and retrieval.
