--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div id="biography">
 <h2>Biography</h2>
 <p>
-	I am an Assistant Professor in the School of Computer Science and Technology at Donghua University. I received my Ph.D. degree in Computer Science from Fudan University in 2022. 
+	I am an Assistant Professor in the School of Computer Science and Technology at Donghua University. I received my Ph.D. degree from Fudan University. 
 	I have published over 20 papers in top conferences and journals. 
 	Additionally, I serve as an area chair at ICASSP 2025. I also serve as a reviewer for several top journals and conferences, including TASLP, TMM, TAC, AAAI, ACM MM, ICASSP, ICME.
 	My main research areas include Music AI, cross-modal information processing and retrieval.
@@ -74,11 +74,11 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
-<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, and Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
 <br><br>
 <b>Shuai Yu</b>."MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
 <br><br>
-<b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang. “RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction.”, IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang. "RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction.", IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
 <br><br>
 <b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer Model for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 1071-1075, 2024.
 <br><br>
