--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <br><br>
 <b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer Model for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 1071-1075, 2024.
 <br><br>
-<b>Shuai Yu</b>, Yi Yu, Wei Li, "A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction", Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
+<b>Shuai Yu</b>, Yi Yu, Xiaoheng Sun, Wei Li, "A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction", Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
 <br><br>
 <b>Shuai Yu</b>, Xi Chen, Wei Li, "Hierarchical Graph-based Neural Network for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 626-630, 2022.
 <br><br>
