--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 * indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 <br><br>
      
-<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, Yi Yu. "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision". Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Ke Chen, Yi Yu, "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision", Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
 <br><br>
-<b>Shuai Yu</b>."MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
+<b>Shuai Yu</b>, "MCSSME: Multi-task Contrastive Learning for Semi-Supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the AAAI Conference on Artificial Intelligence (AAAI, <b>CCF-A</b>), pp. 365-373, 2024.
 <br><br>
-<b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang. "RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction.", IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
+<b>Shuai Yu</b>, Xiaoliang He, Yanting Zhang, "RevNet: A Review Network with Group Aggregation Fusion for Singing Melody Extraction", IEEE Conference on Multimedia Expo (ICME, <b>CCF-B</b>), pp.1-6, 2024.
 <br><br>
-<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li. "A Scalable Sparse Transformer Model for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 1071-1075, 2024.
+<b>Shuai Yu</b>, Jun Liu, Yi Yu, Wei Li, "A Scalable Sparse Transformer Model for Singing Melody Extraction", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp. 1071-1075, 2024.
 <br><br>
 <b>Shuai Yu</b>, Yi Yu, Xiaoheng Sun, Wei Li, "A Neural Harmonic-aware Network with Gated Attentive Fusion for Singing Melody Extraction", Neurocomputing (JCR Q1, IF=6.0), Vol.521, pp. 160-171, 2023.
 <br><br>
