--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
      
 * indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 <br><br>
+Xiaoliang He, Kangjie Dong, Jingkai Cao, <b>Shuai Yu<sup>†</sup></b>, Wei Li, Yi Yu, "A Mamba-based Network for Semi-supervised Singing Melody Extraction Using Confidence Binary Regularization", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp.1-5, 2025.
+<br><br>
 Jun Liu, Kangjie Dong, Qiubo Huang, <b>Shuai Yu<sup>†</sup></b>, Wei Li, "Ultra Lightweight Singing Melody Extraction via Combination of Convolution and MLP", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp.1-5, 2025.
 <br><br>
 <b>Shuai Yu</b>, Xiaoliang He, Ke Chen, Yi Yu, "HKDSME: Heterogeneous Knowledge Distillation for Semi-supervised Singing Melody Extraction Using Harmonic Supervision", Proceedings of the 32nd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A, Best Paper Nomination</b>), pp. 545-553, 2024.
