--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
      
 * indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 <br><br>
+<b>Shuai Yu</b>, Xiaoliang He, Kangjie Dong, Yi Yu, "DUDA: A Two-stage Decoupling Unsupervised Domain Adaptation Framework for Semi-supervised Singing Melody Extraction from Polyphonic Music", Proceedings of the 33rd ACM International Conference on Multimedia (ACM Multimedia, <b>CCF-A</b>), 2025.
+<br><br>
 Xiaoliang He, Kangjie Dong, Jingkai Cao, <b>Shuai Yu<sup>†</sup></b>, Wei Li, Yi Yu, "A Mamba-based Network for Semi-supervised Singing Melody Extraction Using Confidence Binary Regularization", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp.1-5, 2025.
 <br><br>
 Jun Liu, Kangjie Dong, Qiubo Huang, <b>Shuai Yu<sup>†</sup></b>, Wei Li, "Ultra Lightweight Singing Melody Extraction via Combination of Convolution and MLP", International Conference on Acoustics, Speech and Signal Processing (ICASSP, <b>CCF-B</b>), pp.1-5, 2025.
